DOCS: atualização sobre AI.