@@ -78,12 +78,17 @@ Pré-requisitos (OpenAI + Gemini AI):
 
 Cliente com múltiplos modelos de IA (OpenAI + Gemini AI):
 1. Adicionar dependência;
-   a. Spring AI Model OpenAI (spring-ai-starter-model-openai).
+   a. Spring AI Model OpenAI (spring-ai-starter-model-openai);
+   b. Spring AI Model Google GenAI (spring-ai-starter-model-google-genai).
 2. Adicionar configuração no application.yml;
-   a. Configuração de IA;
-   b. Configuração de Logging;
-3. Criar ChatController e seus DTOs;
-4. Faça Post no endpoint do chat para testar.
+   a. Desativação de client padrão para usar múltiplos modelos;
+   b. Configuração de OpenAI;
+   c. Configuração de Google GenAI;
+   d. Configuração de Logging.
+3. Criar classe de configuração dos beans dos dois modelos;
+4. Criar ChatController e DTOs;
+5. Configuração no docker compose (chaves de apis estão no arquivo env para esconder segredos);
+6. Faça Post no endpoint do chat para testar.
 
 
 Pré-requisitos (Deepseek AI):
@@ -122,6 +127,7 @@ Cliente (OpenRouter AI):
 ### Implementação: 
 
 Cliente (OpenAI):
+
 1. Adicionar dependência;
    a. Spring AI Model OpenAI (spring-ai-starter-model-openai).
 ```
@@ -192,5 +198,206 @@ public record ChatResponse(String prompt) {
 }
 ```
 
+
+Cliente com múltiplos modelos de IA (OpenAI + Gemini AI):
+
+1. Adicionar dependência;
+   a. Spring AI Model OpenAI (spring-ai-starter-model-openai);
+   b. Spring AI Model Google GenAI (spring-ai-starter-model-google-genai).
+```
+ext {
+    set('springAiVersion', "2.0.0-M2")
+}
+
+dependencies {
+
+    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
+    implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+    }
+}
+```
+
+2. Adicionar configuração no application.yml;
+   a. Desativação de client padrão para usar múltiplos modelos;
+   b. Configuração de OpenAI;
+   c. Configuração de Google GenAI;
+   d. Configuração de Logging.
+```
+spring:
+  ai:
+    chat:
+      client:
+        enabled: false # Desativa o cliente padrão para usar múltiplos modelos
+
+    openai:
+      base-url: ${OPENAI_BASE_URL:https://api.openai.com}
+      api-key: ${OPENAI_API_KEY}
+      chat:
+        options:
+          model: gpt-5-nano
+          temperature: 1
+
+    google:
+      genai:
+        api-key: ${GEMINI_API_KEY}
+        chat:
+          options:
+            model: gemini-2.0-flash
+            temperature: 0.1
+```
+
+3. Criar classe de configuração dos beans dos dois modelos;
+```
+import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.chat.client.advisor.SimpleLoggerAdvisor;
+import org.springframework.ai.google.genai.GoogleGenAiChatModel;
+import org.springframework.ai.openai.OpenAiChatModel;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+public class ChatAiClientConfig {
+
+    @Bean(name = "openAiChatClient")
+    public ChatClient openAiChatClient(OpenAiChatModel openAiChatModel) {
+        return ChatClient.builder(openAiChatModel)
+                .defaultAdvisors(new SimpleLoggerAdvisor())
+                .build();
+    }
+
+    @Bean(name = "geminiAiChatClient")
+    public ChatClient geminiAiChatClient(GoogleGenAiChatModel googleGenAiChatModel) {
+        return ChatClient.builder(googleGenAiChatModel)
+                .defaultAdvisors(new SimpleLoggerAdvisor())
+                .build();
+    }
+}
+```
+
+4. Criar ChatController e DTOs;
+```
+import backend.ia.infrastructure.dtos.request.ChatRequest;
+import backend.ia.infrastructure.dtos.response.ChatResponse;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
+import lombok.extern.slf4j.Slf4j;
+import org.jspecify.annotations.NullMarked;
+import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@Tag(name = "Chat", description = "Controlador do recurso de Chat de Ias.")
+@Slf4j
+@NullMarked
+@RestController
+@RequestMapping(path = {"/api/"})
+public class ChatController {
+
+    private final ChatClient openAiChatClient;
+
+    private final ChatClient geminiAiChatClient;
+
+    public ChatController(
+            @Qualifier("openAiChatClient") ChatClient openAiChatClient,
+            @Qualifier("geminiAiChatClient") ChatClient geminiAiChatClient) {
+        this.openAiChatClient = openAiChatClient;
+        this.geminiAiChatClient = geminiAiChatClient;
+    }
+
+    @PostMapping(value = "/{version}/ias/openai/chat", version = "1.0")
+    public ChatResponse chatOpenAi(@RequestBody @Valid ChatRequest input) {
+        var response = openAiChatClient.prompt(input.prompt()).call().content();
+        return new ChatResponse(response);
+    }
+
+    @PostMapping(value = "/{version}/ias/gemini/chat", version = "1.0")
+    public ChatResponse chatGemini(@RequestBody @Valid ChatRequest input) {
+        var response = geminiAiChatClient.prompt(input.prompt()).call().content();
+        return new ChatResponse(response);
+    }
+}
+
+public record ChatRequest(@NotBlank String prompt) {
+}
+
+public record ChatResponse(String prompt) {
+}
+```
+
+5. Configuração no docker compose (chaves de IAs estão no arquivo .env para esconder segredos - envs/.env-api-ias);
+```
+  api-ias:
+    image: juniorsmartins/api-ias:v0.0.2
+    container_name: api-ias
+    hostname: api-ias
+    build:
+      context: ../api-ias
+      dockerfile: Dockerfile
+      args:
+        APP_NAME: "api-ias"
+        APP_VERSION: "v0.0.2"
+        APP_DESCRIPTION: "Microsserviço responsável por fornecer inteligência artificial."
+    env_file:
+      - envs/.env-api-ias
+    ports:
+      - "9010:9010"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          memory: 256M
+          cpus: '0.3'
+    environment:
+      TZ: utc
+      SERVER_PORT: 9010
+      SPRING_CLOUD_CONFIG_SERVER_URI: http://configserver:8888
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8761/eureka/
+      SPRING_PROFILES_ACTIVE: dev
+      SPRING_RABBITMQ_HOST: "rabbit"
+      RABBIT_HOST: rabbit
+      RABBIT_PORT: 5672
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      OPENAI_BASE_URL: https://api.openai.com
+      GEMINI_BASE_URL: https://generativelanguage.googleapis.com
+      GEMINI_COMPLETIONS_PATH: /v1beta/openai/chat/completions
+      JAVA_TOOL_OPTIONS: "--enable-native-access=ALL-UNNAMED" # Elimina alguns warnnings
+    restart: unless-stopped
+    networks:
+      - communication
+    depends_on:
+      schema-registry:
+        condition: service_healthy
+      configserver:
+        condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+```
+
+6. Faça Post no endpoint do chat para testar.
+```
+Final dos endpoints: 
+
+/api/1.0/ias/openai/chat
+/api/1.0/ias/gemini/chat
+
+Corpo da mensagem: 
+
+{
+    "prompt": "Qual o resultado dessa equação: 2 + 2"
+}
+```
 
 
